Bug 1385013 - Check all vertexes for the target frame are outside of the parent frame if the target frame is empty. r=birtles

We create empty rectangle (zero-height or zero-width) frame for element which
has no content inside it, e.g.  '<p></p>'.  And nsRect.Intersects returns false
if either of the rectangles are empty, so if we check
!transformedRect.Intersects(scrollableRect) and transformedRect is empty, we
will end up returning true from IsFrameScrolledOutOfView even though the point
represented by the empty transformedRect might be inside the
scrollableRect.

The reftest causes timeout without this fix since the animation never updates
after the initial paint.

MozReview-Commit-ID: FymFJfjxyGc